Fix popover's modal-ness on mobile

--- a/app/styles/tailwind.css
+++ b/app/styles/tailwind.css
@@ -33,4 +33,7 @@
 	html {
 		scroll-behavior: smooth;
 	}
+	body:has(dialog) {
+		overflow: hidden;
+	}
 }
